--- a/ki-site/public/index.html
+++ b/ki-site/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="<%= BASE_URL %>favicon.svg">
     <title>KI in der Wirtschaft</title>
     <!-- Fullpage.js -->
     <link rel="stylesheet" href="https://unpkg.com/fullpage.js/dist/fullpage.min.css">
